Fixed Border To Make It Better, Started with Changing Text Color

--- a/Daemi1.html
+++ b/Daemi1.html
@@ -8,35 +8,47 @@
 
 <style type="text/css">
 
+	#theInput {
+		border:none;
+		border-bottom: 2px solid #D3D3D3;
+
+	}
+ 	#theInput:focus {
+ 		border:none;
+ 		outline:none;
+ 		border-bottom: 2px solid #FF6347;
+ 	}
+
+ 	#theLink {
+ 		color:black;
+ 		
+
+ 	}
 
 </style>
 <body>
 
 	<div id="app">
 		
-		<input id="input" v-model="inputInformation">
+		<input id="theInput" v-model="inputInformation">
 		<br>
-		<a v-bind:href="'http://www.google.com/search?q=' + inputInformation" v-text="inputInformation" id="theLink"></a>
+		<a v-bind:href="'http://www.google.com/search?q=' + inputInformation" v-text="'Smelltu hér til að leita'" id="theLink" v-bind:class="[isActive,inactive]"></a>
 
 	</div>
+
 
 
 <script src="https://unpkg.com/vue"></script>
 <script type="text/javascript">
 
-	var theInput = document.getElementById('input')
 
-	theInput.style="border-bottom: 2px solid #D3D3D3"
-	theInput.focus="border-bottom: 2px solid #FF0000"
-
-	theLink = document.getElementById("theLink");
-	theLink.style="color:black";
 
 	var app = new Vue({
 		el: "#app",
 		data: {
 			inputInformation: "",
-			check: 0
+			isActive:"#FF6347",
+			inactive: "black" ,
 		}
 	})
 
